--- a/style.css
+++ b/style.css
@@ -4,16 +4,29 @@
     grid-template-rows: repeat(8, 50px);
 }
 
+.row {
+    width: 50px;
+    height: 400px;
+}
+
 .square {
     width: 50px;
     height: 50px;
 }
 
-.square:nth-child(odd) {
+.row:nth-of-type(even) .square:nth-child(odd) {
     background-color: #d18b47;
 }
 
-.square:nth-child(even) {
+.row:nth-of-type(even) .square:nth-child(even) {
+    background-color: #ffce9e;
+}
+
+.row:nth-of-type(odd) .square:nth-last-of-type(odd) {
+    background-color: #d18b47;
+}
+
+.row:nth-of-type(odd) .square:nth-last-of-type(even) {
     background-color: #ffce9e;
 }
 
@@ -21,7 +34,10 @@
     width: 50px;
     height: 50px;
     position: absolute;
-    /*font-size: 40px;*/
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
 }
 
 .black-king::before {
