--- a/style.css
+++ b/style.css
@@ -25,6 +25,32 @@ h1 {
     font-weight: 500;
 }
 
+button {
+    color: #fff;
+    background-color: #000;
+    border: none;
+    width: 120px;
+    height: 40px;
+    border-radius: 6px;
+    font-size: 0.9rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+button:hover {
+    background-color: #434343;
+}
+
+.move-history {
+    margin-top: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    height: 100px;
+    width: 400px;
+    overflow-y: scroll;
+    background-color: #f2f2f2;
+}
 .board {
     width: 400px;
     margin: 20px auto;
